subprojects/ere/ere/tests/ui/engine_one_pass_not_applicable.stderr
error: Regex is not one-pass and could not be optimized to become one-pass. Try a different engine.
 --> tests/ui/engine_one_pass_not_applicable.rs:5:13
  |
5 |     #[regex(r"(a+)(a+)", engine = OnePassU8)]
  |             ^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `Greedy`
 --> tests/ui/engine_one_pass_not_applicable.rs:8:13
  |
8 |     let _ = Greedy::exec("aaa");
  |             ^^^^^^ use of undeclared type `Greedy`
  |
help: there is an enum variant `crate::ere::config::AmbiguousSubmatchMode::Greedy` and 3 others; try using the variant's enum
  |
8 -     let _ = Greedy::exec("aaa");
8 +     let _ = crate::ere::config::AmbiguousSubmatchMode::exec("aaa");
  |
8 -     let _ = Greedy::exec("aaa");
8 +     let _ = ere_core::config::AmbiguousSubmatchMode::exec("aaa");
  |
8 -     let _ = Greedy::exec("aaa");
8 +     let _ = super_speedy_syslog_searcher_ere::config::AmbiguousSubmatchMode::exec("aaa");
  |
